{
  "version": 4,
  "terraform_version": "0.12.8",
  "serial": 16,
  "lineage": "a0495534-2879-8305-6ab5-850598dfe11c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "public_db",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0a6708540bb066c04",
            "domain": "vpc",
            "id": "eipalloc-01fda2e1343f27f76",
            "instance": "i-030ff7aed4a3a34a4",
            "network_interface": "eni-0d6fe4b43fb781444",
            "private_dns": "ip-192-168-1-42.eu-west-1.compute.internal",
            "private_ip": "192.168.1.42",
            "public_dns": "ec2-34-241-248-50.eu-west-1.compute.amazonaws.com",
            "public_ip": "34.241.248.50",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "public-db"
            },
            "vpc": true
          },
          "depends_on": [
            "aws_instance.db",
            "aws_internet_gateway.gw"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "public_http",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-03845e8ce516a79c1",
            "domain": "vpc",
            "id": "eipalloc-052877e4574674d99",
            "instance": "i-09344d1c6087a9b8e",
            "network_interface": "eni-07f35be49f4f6e88a",
            "private_dns": "ip-192-168-1-170.eu-west-1.compute.internal",
            "private_ip": "192.168.1.170",
            "public_dns": "ec2-52-211-156-178.eu-west-1.compute.amazonaws.com",
            "public_ip": "52.211.156.178",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "public-http"
            },
            "vpc": true
          },
          "depends_on": [
            "aws_instance.http",
            "aws_internet_gateway.gw"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "db",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-005af4c3162f495fa",
            "arn": "arn:aws:ec2:eu-west-1:153726843398:instance/i-030ff7aed4a3a34a4",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-030ff7aed4a3a34a4",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "user-key",
            "monitoring": false,
            "primary_network_interface_id": "eni-0d6fe4b43fb781444",
            "private_dns": "ip-192-168-1-42.eu-west-1.compute.internal",
            "private_ip": "192.168.1.42",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0261e130711dcdad0",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e6df8e9d405aedf1",
            "tags": {
              "Name": "db-instance"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-038d159d407935a7a",
              "sg-0d90c8b539178868c"
            ]
          },
          "depends_on": [
            "aws_key_pair.user_key",
            "aws_security_group.administration",
            "aws_security_group.db",
            "aws_subnet.http",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "http",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-005af4c3162f495fa",
            "arn": "arn:aws:ec2:eu-west-1:153726843398:instance/i-09344d1c6087a9b8e",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-09344d1c6087a9b8e",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "user-key",
            "monitoring": false,
            "primary_network_interface_id": "eni-07f35be49f4f6e88a",
            "private_dns": "ip-192-168-1-170.eu-west-1.compute.internal",
            "private_ip": "192.168.1.170",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 0,
                "volume_id": "vol-093d6519a2bd7ffd8",
                "volume_size": 10,
                "volume_type": "standard"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e6df8e9d405aedf1",
            "tags": {
              "Name": "http-instance"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0d90c8b539178868c",
              "sg-0f173850f13ccc827"
            ]
          },
          "depends_on": [
            "aws_key_pair.user_key",
            "aws_security_group.administration",
            "aws_security_group.web",
            "aws_subnet.http",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-028088927505d35de",
            "owner_id": "153726843398",
            "tags": {
              "Name": "internet-gateway"
            },
            "vpc_id": "vpc-0b9244249ddc596d0"
          },
          "depends_on": [
            "aws_vpc.terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-047f15053c65f806c",
            "owner_id": "153726843398",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-028088927505d35de",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "vpc_id": "vpc-0b9244249ddc596d0"
          },
          "depends_on": [
            "aws_internet_gateway.gw",
            "aws_vpc.terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "http",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bcb87753eb5e60a5",
            "route_table_id": "rtb-047f15053c65f806c",
            "subnet_id": "subnet-0e6df8e9d405aedf1"
          },
          "depends_on": [
            "aws_route_table.public",
            "aws_subnet.http"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "administration",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:153726843398:security-group/sg-0d90c8b539178868c",
            "description": "Allow default administration service",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d90c8b539178868c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "administration",
            "name_prefix": null,
            "owner_id": "153726843398",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "administration"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b9244249ddc596d0"
          },
          "depends_on": [
            "aws_vpc.terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:153726843398:security-group/sg-038d159d407935a7a",
            "description": "Allow db incgress trafic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-038d159d407935a7a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "db",
            "name_prefix": null,
            "owner_id": "153726843398",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "db"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b9244249ddc596d0"
          },
          "depends_on": [
            "aws_vpc.terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:153726843398:security-group/sg-0f173850f13ccc827",
            "description": "Allow web incgress trafic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f173850f13ccc827",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "web",
            "name_prefix": null,
            "owner_id": "153726843398",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "web"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b9244249ddc596d0"
          },
          "depends_on": [
            "aws_vpc.terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "http",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:153726843398:subnet/subnet-0e6df8e9d405aedf1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "192.168.1.0/24",
            "id": "subnet-0e6df8e9d405aedf1",
            "map_public_ip_on_launch": false,
            "owner_id": "153726843398",
            "tags": {
              "Name": "subnet-http"
            },
            "vpc_id": "vpc-0b9244249ddc596d0"
          },
          "depends_on": [
            "aws_internet_gateway.gw",
            "aws_vpc.terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "terraform",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:153726843398:vpc/vpc-0b9244249ddc596d0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-0dd9dea909767c2e4",
            "default_route_table_id": "rtb-07d85cd36d5510c64",
            "default_security_group_id": "sg-022ec6827e5243d07",
            "dhcp_options_id": "dopt-dc21bfba",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0b9244249ddc596d0",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-07d85cd36d5510c64",
            "owner_id": "153726843398",
            "tags": {
              "Name": "vpc-http"
            }
          }
        }
      ]
    }
  ]
}